# indico-hub

./: .env  .gitignore  Makefile  README.md  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
indico_hub/: app.py  config.py  crawler.py  db.py  es_conf.py  indico_hub  models.py  operations.py  periodic_inst.py  register.py  schemas.py  server.py  tasks.py  tests.py
specs/: indico-hub.yaml
