[metadata]
name = indico-hub
version = attr: indico_hub.__version__
url = https://github.com/indico/indico-hub
author = Indico Team
author_email = indico-team@cern.ch
license = MIT
description = Indico Community Hub microservice
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM


[options]
packages = find:
python_requires = ~=3.9
zip_safe = False
include_package_data = True


[flake8]
exclude=__pycache__
max-line-length=89
